[package]
name = "rust-p2p-helloworld"
version = "0.1.0"
edition = "2018"
default-run = "rust-p2p-helloworld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
jsonrpc-http-server = "18"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
tokio = { version = "1.11", features = ["full"] }
log = "0.4"
futures = "0.3"
